--- a/BarberLayered/appsettings.json
+++ b/BarberLayered/appsettings.json
@@ -8,5 +8,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Seq" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
